--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "delay-pod",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "webhook.js",
   "scripts": {
     "start": "node webhook.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "MIT",
